Fixed UI layout issues in CustomDesignComponent

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -188,10 +188,6 @@ button:active {
 
 /* rc-slider-related styles */
 
-.rc-slider-with-marks {
-  width: 150px;
-}
-
 .rc-slider-rail {
   background-color: #cccccc !important;
 }
