--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -25,6 +25,10 @@
   height: 75%;
 }
 
+.overviewImage {
+  height: 140px !important;
+}
+
 .inputDiv {
   margin: 15px;
 }
